--- a/ParseChat/Base.lproj/Main.storyboard
+++ b/ParseChat/Base.lproj/Main.storyboard
@@ -62,47 +62,103 @@
                     <connections>
                         <outlet property="passwordField" destination="yKk-Lf-nAy" id="KuI-Us-a8B"/>
                         <outlet property="usernameField" destination="hZX-sc-dZP" id="9qV-bU-XgA"/>
-                        <segue destination="dCD-9H-0ov" kind="presentation" identifier="loginSegue" id="1RH-ps-iZ0"/>
+                        <segue destination="dCD-9H-0ov" kind="presentation" identifier="loginSegue" id="6a5-Ia-wXX"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="117.59999999999999" y="118.29085457271366"/>
+            <point key="canvasLocation" x="946" y="116"/>
         </scene>
         <!--Chat-->
         <scene sceneID="XEY-dG-aec">
             <objects>
-                <viewController id="87s-xG-iih" customClass="ChatViewController" customModule="ParseChat" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ChatViewController" id="87s-xG-iih" customClass="ChatViewController" customModule="ParseChat" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="xN9-Fs-mVl">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aZy-qm-4uw">
-                                <rect key="frame" x="323" y="79" width="36" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Send"/>
-                            </button>
                             <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Type a message ... " textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="xkZ-yY-sRJ">
-                                <rect key="frame" x="37" y="79" width="278" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <rect key="frame" x="16" y="78" width="281" height="30"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="kSd-3w-nNU">
+                                <rect key="frame" x="0.0" y="131" width="375" height="536"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ChatCell" rowHeight="107" id="wmq-m7-RWj" customClass="ChatCell" customModule="ParseChat" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="107"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="wmq-m7-RWj" id="hFM-zL-Hnm">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="106.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h3N-l7-wSk">
+                                                    <rect key="frame" x="8" y="8" width="45" height="18"/>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="This is the message from user. " textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Uj0-QI-HRv">
+                                                    <rect key="frame" x="8" y="30" width="359" height="66"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="h3N-l7-wSk" firstAttribute="top" secondItem="hFM-zL-Hnm" secondAttribute="top" constant="8" id="AQO-Yx-CcK"/>
+                                                <constraint firstItem="Uj0-QI-HRv" firstAttribute="leading" secondItem="hFM-zL-Hnm" secondAttribute="leading" constant="8" id="FC5-0n-k1k"/>
+                                                <constraint firstItem="h3N-l7-wSk" firstAttribute="leading" secondItem="hFM-zL-Hnm" secondAttribute="leading" constant="8" id="SE9-AE-2wZ"/>
+                                                <constraint firstItem="Uj0-QI-HRv" firstAttribute="top" secondItem="h3N-l7-wSk" secondAttribute="bottom" constant="8" id="ctK-P5-QXo"/>
+                                                <constraint firstAttribute="bottom" secondItem="Uj0-QI-HRv" secondAttribute="bottom" constant="8" id="jur-yL-29X"/>
+                                                <constraint firstAttribute="trailing" secondItem="Uj0-QI-HRv" secondAttribute="trailing" constant="8" id="mFf-ps-HnM"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="chatMessage" destination="Uj0-QI-HRv" id="l2Z-GA-cuW"/>
+                                            <outlet property="username" destination="h3N-l7-wSk" id="R39-lT-k1g"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aZy-qm-4uw">
+                                <rect key="frame" x="323" y="78" width="36" height="27"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Send"/>
+                                <connections>
+                                    <action selector="sendButton:" destination="87s-xG-iih" eventType="touchUpInside" id="4Ay-xO-mze"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="HEs-q9-968"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Chat" id="SKA-Wg-Yhz"/>
+                    <navigationItem key="navigationItem" title="Chat" id="SKA-Wg-Yhz">
+                        <barButtonItem key="leftBarButtonItem" title="logout" id="f1M-ay-JAm">
+                            <connections>
+                                <action selector="logoutButton:" destination="87s-xG-iih" id="CdX-5x-Dcs"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="chatMessageField" destination="xkZ-yY-sRJ" id="36p-Mg-T8c"/>
+                        <outlet property="tableView" destination="kSd-3w-nNU" id="TK4-EO-KLF"/>
+                        <segue destination="BYZ-38-t0r" kind="presentation" identifier="logoutSegue" id="6g0-LD-xF0"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Sl9-Qf-b86" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1924" y="117.39130434782609"/>
+            <point key="canvasLocation" x="2661.5999999999999" y="115.59220389805098"/>
         </scene>
-        <!--Navigation Controller-->
+        <!--Item-->
         <scene sceneID="95L-uH-b0S">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="dCD-9H-0ov" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="6p2-NX-Jb1"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="dlO-42-qGZ">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
@@ -115,7 +171,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="EBc-Pf-PWY" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="984.79999999999995" y="117.39130434782609"/>
+            <point key="canvasLocation" x="1817" y="117"/>
         </scene>
     </scenes>
 </document>
